[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodriver-proxyhat"
version = "0.1.0"
description = "ProxyHat residential proxies for nodriver (undetected Chrome) — CDP proxy auth, sticky sessions, geo-targeting, rotation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ProxyHat", email = "support@proxyhat.com" }]
keywords = [
    "nodriver",
    "undetected-chromedriver",
    "proxy",
    "residential-proxy",
    "proxyhat",
    "browser-automation",
    "web-scraping",
    "cdp",
    "sticky-session",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = ["proxyhat>=0.2.0"]

[project.urls]
Homepage = "https://proxyhat.com"
Documentation = "https://docs.proxyhat.com"
Repository = "https://github.com/ProxyHatCom/nodriver-proxyhat"

[project.optional-dependencies]
# nodriver is a peer/optional dependency: install it yourself to launch a real
# browser. proxyhat_browser_args() and proxyhat_auth() work without it.
nodriver = ["nodriver>=0.32"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/nodriver_proxyhat"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
